<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/title_home" />

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/title_search" />

    <item
            android:id="@+id/navigation_upload"
            android:icon="@drawable/ic_file_upload_white_24dp"
            android:title="@string/title_upload" />

    <item
            android:id="@+id/navigation_post"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/title_post" />

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_stars_white_24dp"
            android:title="@string/title_favorite" />

</menu>
