<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.epicture.app.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_search"
            android:name="com.epicture.app.ui.search.SearchFragment"
            android:label="@string/title_search"
            tools:layout="@layout/fragment_search" />

    <fragment
            android:id="@+id/navigation_upload"
            android:name="com.epicture.app.ui.upload.UploadFragment"
            android:label="@string/title_upload"
            tools:layout="@layout/fragment_upload" />

    <fragment
            android:id="@+id/navigation_post"
            android:name="com.epicture.app.ui.post.PostFragment"
            android:label="@string/title_upload"
            tools:layout="@layout/fragment_upload" />

    <fragment
            android:id="@+id/navigation_favorite"
            android:name="com.epicture.app.ui.favorite.FavoriteFragment"
            android:label="@string/title_upload"
            tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.epicture.app.ui.favorite.FavoriteFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

</navigation>